syntax = "proto3";
option go_package = "github.com/cahllagerfeld/go-service-v2/number/number;number";

message GetRandomNumberRequest {}
message GetRandomNumberResponse { int64 rand = 1; }

service Number {
  rpc GetRandomNumber(GetRandomNumberRequest) returns (GetRandomNumberResponse);
}
